--- a/Gaddi24/Localization/hi.lproj/Localizable.strings
+++ b/Gaddi24/Localization/hi.lproj/Localizable.strings
@@ -1,13 +1,13 @@
 /*
  * Loco ios export: iOS Localizable.strings
- * Project: strings (2).xml conversion
+ * Project: strings (5).xml conversion
  * Release: Working copy
  * Locale: en, English
  * Exported by: Unregistered user
- * Exported at: Wed, 07 Oct 2020 22:08:17 +0530
+ * Exported at: Sat, 21 Nov 2020 19:36:02 +0530
  */
-"ITEM_HISTORY" = "प्लेबैक";
-"ITEM_ENGINE" = "इंजन";
+
+/* Button */
 "BTN_LOGIN" = "लॉग इन करें";
 
 /*  */
@@ -23,7 +23,7 @@
 "BTN_TRACK_VEHICLE" = "वाहन पर नज़र रखना";
 
 /*  */
-"BTN_HIDE" = "छिपाना ";
+"BTN_HIDE" = "छिपाना";
 
 /*  */
 "BTN_DONT_SHOW_AGAIN" = "फिर मत दिखाना";
@@ -63,6 +63,9 @@
 
 /*  */
 "ITEM_NOTIFICATION" = "अधिसूचना";
+
+"ITEM_HISTORY" = "प्लेबैक";
+"ITEM_ENGINE" = "इंजन";
 
 /*  */
 "ITEM_HOME" = "डैशबोर्ड";
@@ -143,13 +146,22 @@
 "ITEM_EDIT_TRIP" = "यात्रा संपादित करें";
 
 /*  */
+"ITEM_START_TRIP" = "यात्रा शुरू करें";
+
+/*  */
 "ITEM_STOP_TRIP" = "यात्रा को रोके";
 
 /*  */
 "ITEM_DELETE_TRIP" = "यात्रा को हटाएं";
 
 /*  */
+"ITEM_EMAIL_TRIP" = "यात्रा ईमेल करें";
+
+/*  */
 "ITEM_GENERATE_TRIP_REPORT" = "रिपोर्ट बनाएं";
+
+/*  */
+"ITEM_MARK_READ" = "पढ़े हुए का चिह्न";
 
 /* Share Link Menu Item */
 "TODAY" = "आज";
@@ -177,6 +189,9 @@
 
 /* Checkbox Item */
 "CB_NOTIFICATION" = "सूचना बताये";
+
+/*  */
+"CB_SEND_SMS" = "संदेश भेजें";
 
 /* Navigation Drawer */
 "NAVIGATION_OPEN" = "खुला दराज";
@@ -208,6 +223,9 @@
 /*  */
 "TITLE_TRIPS" = "यात्रा";
 
+/*  */
+"TITLE_TRIP_DETAIL" = "यात्रा विवरण";
+
 /* Hint */
 "HINT_USERNAME" = "उपयोगकर्ता नाम";
 
@@ -227,7 +245,7 @@
 "HINT_CONFIRM_PASSWORD" = "पासवर्ड की पुष्टि कीजिये";
 
 /*  */
-"HINT_SEARCH" = " \tवाहन खोजें";
+"HINT_SEARCH" = "वाहन खोजें";
 
 /*  */
 "HINT_TRIP_NAME" = "यात्रा का नाम";
@@ -243,6 +261,21 @@
 
 /*  */
 "HINT_TRIP_START_DATE_TIME" = "यात्रा की शुरुआत";
+
+/*  */
+"HINT_TRIP_END_DATE_TIME" = "यात्रा का अंत";
+
+/*  */
+"HINT_TRIP_CUST_NAME" = "ग्राहक का नाम";
+
+/*  */
+"HINT_TRIP_CUST_NUMBER" = "ग्राहक का मोबाइल नंबर";
+
+/*  */
+"HINT_TRIP_CUST_EMAIL" = "ग्राहक का ईमेल";
+
+/*  */
+"HINT_TRIP_RATE_PER_KM" = "मूल्य प्रति किलोमीटर";
 
 /* Error Messages */
 "CONNECTION_ERROR" = "इंटरनेट कनेक्शन के कारण आप ऑफ़लाइन हैं.";
@@ -296,16 +329,28 @@
 "ERROR_NO_PLAYBACK" = "चयनित अवधि के लिए कोई मूविंग डेटा उपलब्ध नहीं है।";
 
 /*  */
-"ERROR_FAIL_ACTIVE_PARKINGMODE" = "पार्किंग मोड को सक्रिय करने में विफल";
+"ERROR_FAIL_ACTIVATE_PARKING_MODE" = "पार्किंग मोड को सक्रिय करने में विफल";
 
 /*  */
-"ERROR_FAIL_DEACTIVE_PARKINGMODE" = "पार्किंग मोड को निष्क्रिय करने में विफल";
+"ERROR_FAIL_DEACTIVATE_PARKING_MODE" = "पार्किंग मोड को निष्क्रिय करने में विफल";
 
 /*  */
 "ERROR_END_START_DATETIME" = "प्रारंभ डेटाइम अंत डेटाइम से अधिक नहीं हो सकता है";
 
 /*  */
 "ERROR_TRIP_NAME" = "कृपया यात्रा का नाम दर्ज करें";
+
+/*  */
+"ERROR_VALID_MOBILE_NUMBER" = "कृपया मान्य मोबाइल नंबर दर्ज करें";
+
+/*  */
+"ERROR_TRIP_DESCRIPTION" = "कृपया यात्रा विवरण दर्ज करें";
+
+/*  */
+"ERROR_VALID_EMAIL" = "कृपया मान्य ईमेल दर्ज करें";
+
+/*  */
+"ERROR_NO_VEHICLES_TRIP" = "यात्रा बनाने के लिए कोई वाहन उपलब्ध नहीं है";
 
 /* Textview */
 "TV_APP_VERSION" = "संस्करण %@";
@@ -397,6 +442,30 @@
 /*  */
 "TV_NO_TRIPS_AVAILABLE" = "कोई यात्रा उपलब्ध नहीं है";
 
+/*  */
+"TV_DISTANCE_LABEL" = "दूरी";
+
+/*  */
+"TV_FUEL_LABEL" = "ईंधन";
+
+/*  */
+"TV_MAX_SPEED" = "अधिकतम गति";
+
+/*  */
+"TV_TRIP_CUST_NAME" = "ग्राहक का नाम";
+
+/*  */
+"TV_TRIP_CUST_NUMBER" = "मोबाइल नंबर";
+
+/*  */
+"TV_TOTAL_MOVING" = "कुल गतिमान समय";
+
+/*  */
+"TV_TOTAL_STOP" = "कुल रुकने का समय";
+
+/*  */
+"TV_TOTAL_IDLE" = "कुल चाबी शुरू रहने का समय";
+
 /* Tabs */
 "TAB_ALL" = "सब (%d)";
 
@@ -445,4 +514,5 @@
 /*  */
 "ALERT_STOP" = "रोकना";
 
-"ERROR_VALID_MOBILE_NUMBER" = "कृपया मान्य मोबाइल नंबर दर्ज करें";
+/*  */
+"ALERT_MARK_ALL_READ" = "सभी अधिसूचना को पढ़े अनुसार चिह्नित करें";
